[package]
name = "readpage"
version = "0.2.0"
edition = "2021"

[dependencies]
article_scraper = "^2"
clap = { version = "^4.5", features = ["cargo", "color"] }
html-escape = "0.2.13"
html2text = "0.12.5"
reqwest = {version = "^0.12", features = ["blocking", "charset"] }
termsize = "0.1.6"
thiserror = "1.0.61"
tokio = "1.38.0"
url = "2.5.0"

